# waterboy

lambda_rpi/: lambda_function.py  upload_telegram_rpi.sh
lambda_telegram/: function.py  upload_telegram_update.sh
rpi-code/: Cargo.toml
rpi-code/.cargo/: config
rpi-code/src/: main.rs
